css/common.css
@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');

:root {
    --maincolor: #008FD5;
    --blue_: #008FD5;
    --red_: #FC4F30;
    --yellow_: #E5AE38;
    --green_: #6D904F;
    --mainfontcolor: #131516;
}

html {
    color: var(--mainfontcolor);
    margin-left: 20%;
    margin-right: 20%;
    padding: 0;
    font: normal 17px Roboto, sans-serif;
    line-height: 25px;
    text-align: justify;

}

header a.homelink {
    text-decoration: none; 
    color: white;
    font: normal 35px Menlo, sans;
    height: 100px;
}
nav a.current {
    background: white;
    color: var(--maincolor);
    text-decoration: none;  
    box-sizing: content-box;    
    width: 100px;
    height: 20px;
    padding: 10px 15px 10px 15px;    
    border: 5px solid white;
    border-radius: 18px 0px;
}
nav a.latent {
    color: white;
    text-decoration: none;  
    padding: 3px 6px 3px 6px;
    box-sizing: content-box;    
    width: 500px;
    height: 20px;
    padding: 10px 15px 10px 15px;    
    border: 5px solid white;
}
nav a.latent:hover {
    color: white;
    text-decoration: none;  
    padding: 3px 6px 3px 6px;
    box-sizing: content-box;    
    width: 500px;
    height: 20px;
    padding: 10px 15px 10px 15px;    
    border: 5px solid white;
    border-radius: 18px 0px;
}
.nav > li {
    display: inline-block;
}
.nav-top {
    font-size: 1.5rem;
}
.omniheader {
    padding: 10px 20px 10px 20px;
    color: white;
    background: var(--maincolor);
    text-align: center;
    align-items: center;
    font: normal 100%/1.4 Menlo, sans;
}


/* APA style table */
table.apa {
  width: auto;
  text-align: center;
  border-collapse: collapse;
}
table.apa td, table.apa th {
  padding: 5px 10px;
}
table.apa tbody td {
  font-size: 15px;
}
table.apa thead {
    border-bottom: 2px solid #000000;
}
table.apa thead th {
  font-size: 15px;
  font-weight: bold;
  text-align: center;
}
table.apa tfoot {
  font-size: 13px;
  font-weight: normal;
  border-top: 2px solid #000000;
}
table.apa tfoot td {
  font-size: 13px;
}
.caption {
    text-align: center;
    font-size: 16px;
}
.tablefooter {
    text-align: center;
    font-size: 12px;
}


/* Image grid table*/
table.imagegrid {
    width: auto;
    text-align: center;
}


/* Image */
img {
    width: 100%;
    height: auto;
}


/* Links */
a:not(.latent):not(.current):not(.homelink):not(.switch) {
    color: var(--maincolor);
    text-decoration: none;
    font: normal 17px Roboto, sans-serif;
    position: relative;
    white-space: nowrap;
    f
}
a:not(.latent):not(.current):not(.homelink):not(.switch):visited {
    color: var(--maincolor);
}
a:not(.latent):not(.current):not(.homelink):not(.switch):hover {
        color: var(--maincolor);
}
a:not(.latent):not(.current):not(.homelink):not(.switch):before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: var(--red_);
  visibility: hidden;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}
a:not(.latent):not(.current):not(.homelink):not(.switch):hover:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}


/* Back to top button */
#myBtn {
    position: fixed; /* Fixed/sticky position */
    display: none;
    bottom: 20px; /* Place the button at the bottom of the page */
    right: 30px; /* Place the button 30px from the right */
    z-index: 99; /* Make sure it does not overlap */
    background-color: white;
    color: var(--maincolor);
    border: 5px solid var(--maincolor);
    cursor: pointer;
    padding: 8px 8px;
    font-size: 18px;
}
#myBtn:hover {
    border-radius: 15px 0px; /* Rounded corners */
}

/* Nested ordered lists */
ol {
  counter-reset: item
}
ol li {
  display: block
}
ol li:before {
  content: counters(item, ".") ". ";
  counter-increment: item;
}
.custom-counter {
  margin: 0;
  padding: 0;
  list-style: none;
}
.custom-counter li {
  counter-increment: step-counter;
}
.custom-counter li::before {
  content: counter(step-counter)'.';
  margin-right: 5px;
}

/* Lists with links */
.loctoc {
    background: white;
    border: 2px solid var(--maincolor);
    box-sizing: content-box;
    display: inline-block;
    padding: 1em 1.5em 1.5em 1em;
}
ul .linkli {
    color: var(--maincolor)
}
ol .linkli {
    color: var(--maincolor)
}

.switch {
    color: var(--maincolor);
    font-size: 18px;
    text-decoration: none;
    box-sizing: content-box;
    width: 500px;
    padding: 3px 5px 3px 5px;
    border: 3px solid var(--maincolor);
}
.switch:hover {
    cursor: pointer;
    color: var(--maincolor);
    font-size: 18px;
    text-decoration: none;
    font-weight: normal;
    box-sizing: content-box;
    width: 500px;
    padding: 3px 5px 3px 5px;
    border: 3px solid var(--maincolor);
    border-radius: 13px 0px;
}

.codeblock {
    font-size: 16px;
    background: #F2F2F2;
    color: var(--mainfontcolor);
    padding: 10px 40px;
    border-left: solid;
    border-left-width: 6px;
    border-left-color: var(--maincolor);
    border-right: solid;
    border-right-width: 6px;
    border-right-color: var(--maincolor);
    border-radius: 5px;
    font-family: 'Source Code Pro', monospace;
}

